<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C3FDFF">

    <Button
        android:id="@+id/playAgainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/play_againButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.194"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.926" />

    <Button
        android:id="@+id/exitButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/exit"
        app:layout_constraintBaseline_toBaselineOf="@+id/playAgainButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.832"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="71dp"
        android:layout_height="31dp"
        android:text="@string/name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorTextOnSecondary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082" />

    <TextView
        android:id="@+id/textViewScore"
        android:layout_width="78dp"
        android:layout_height="37dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="16dp"
        android:text="@string/score"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorTextOnSecondary"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewName"
        app:layout_constraintEnd_toStartOf="@+id/textViewDate"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toEndOf="@+id/textViewName" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="103dp"
        android:layout_height="37dp"
        android:text="@string/date_time"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorTextOnSecondary"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewScore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toStartOf="parent" />

    <GridView
        android:id="@+id/GridView1"
        android:layout_width="378dp"
        android:layout_height="387dp"
        android:background="@color/colorAccent"
        android:fastScrollAlwaysVisible="true"
        android:fastScrollEnabled="true"
        android:nestedScrollingEnabled="false"
        android:numColumns="3"
        android:scrollbarFadeDuration="100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.446" />

</androidx.constraintlayout.widget.ConstraintLayout>